[gd_scene load_steps=2 format=2]

[ext_resource path="res://DisplayPlayer.gd" type="Script" id=1]

[node name="DisplayPlayer" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 24.0
margin_top = -56.0
margin_right = 32.0
margin_bottom = -32.0
color = Color( 0, 0, 1, 1 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = -32.0
margin_top = -56.0
margin_right = -24.0
margin_bottom = -32.0
color = Color( 0, 0, 1, 1 )

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = 24.0
margin_top = 40.0
margin_right = 32.0
margin_bottom = 64.0
color = Color( 0, 0, 1, 1 )

[node name="ColorRect4" type="ColorRect" parent="."]
margin_left = -32.0
margin_top = 40.0
margin_right = -24.0
margin_bottom = 64.0
color = Color( 0, 0, 1, 1 )

[node name="ColorRect5" type="ColorRect" parent="."]
margin_left = -24.0
margin_top = 48.0
margin_right = 24.0
margin_bottom = 56.0
color = Color( 0, 0, 1, 1 )

[node name="ColorRect6" type="ColorRect" parent="."]
margin_left = -24.0
margin_top = -48.0
margin_right = 24.0
margin_bottom = -40.0
color = Color( 0, 0, 1, 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color( 0, 0, 1, 1 )
polygon = PoolVector2Array( 0, -64, 0, -64, 8, -56, 16, -24, 28, 8, 8, 64, -8, 64, -28, 8, -16, -24, -8, -56 )
